first to seventh items

--- a/index.html
+++ b/index.html
@@ -21,6 +21,48 @@
     - The freeCodeCamp Team
 
     -->
+    <main id="main-doc">
+      <section class="main-section" id="Description_of_first_section_topic">
+        <header>
+          Description of first section topic
+        </header>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <code>Code</code>
+        <li>List item</li>
+      </section>
+      <section class="main-section" id="Description_of_second_section_topic">
+        <header>Description of second section topic</header>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <code>Code</code>
+        <li>List item</li>
+      </section>
+      <section class="main-section" id="Description_of_third_section_topic">
+        <header>Description of first third topic</header>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <code>Code</code>
+        <li>List item</li>
+      </section>
+      <section class="main-section" id="Description_of_fourth_section_topic">
+        <header>Description of first fourth topic</header>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <code>Code</code>
+        <li>List item</li>
+      </section>
+      <section class="main-section" id="Description_of_fifth_section_topic">
+        <header>Description of first fifth topic</header>
+        <p>Paragraph</p>
+        <p>Paragraph</p>
+        <code>Code</code>
+        <li>List item</li>
+      </section>
+    </main>
     <script  src="js/index.js"></script>
   </body>
 </html>
