--- a/index.html
+++ b/index.html
@@ -1,68 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
     <main id="main-doc">
+      <nav id="nav">
+        <header class="section-header">Description of technical documentation</header>
+        <a class="nav-link" href="#Description_of_first_section_topic"
+          >Description of first section topic</a
+        >
+        <a class="nav-link" href="#Description_of_second_section_topic"
+          >Description of second section topic</a
+        >
+        <a class="nav-link" href="#Description_of_third_section_topic"
+          >Description of first third topic</a
+        >
+        <a class="nav-link" href="#Description_of_fourth_section_topic"
+          >Description of first fourth topic</a
+        >
+        <a class="nav-link" href="#Description_of_fifth_section_topic"
+          >Description of first fifth topic</a
+        >
+      </nav>
       <section class="main-section" id="Description_of_first_section_topic">
-        <header>
-          Description of first section topic
-        </header>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
+        <header class="section-header"">Description of first section topic</header>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
         <code>Code</code>
-        <li>List item</li>
+        <ul>
+          <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum dolore at magni cum recusandae! Numquam assumenda perferendis illum, possimus debitis quod nobis aut voluptatem nostrum eos rerum eaque, adipisci non!</li>
+        </ul>
       </section>
       <section class="main-section" id="Description_of_second_section_topic">
-        <header>Description of second section topic</header>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
+        <header class="section-header"">Description of second section topic</header>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
         <code>Code</code>
-        <li>List item</li>
+        <ul>
+          <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum dolore at magni cum recusandae! Numquam assumenda perferendis illum, possimus debitis quod nobis aut voluptatem nostrum eos rerum eaque, adipisci non!</li>
+        </ul>
       </section>
       <section class="main-section" id="Description_of_third_section_topic">
-        <header>Description of first third topic</header>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
+        <header class="section-header"">Description of first third topic</header>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
         <code>Code</code>
-        <li>List item</li>
+        <ul>
+          <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum dolore at magni cum recusandae! Numquam assumenda perferendis illum, possimus debitis quod nobis aut voluptatem nostrum eos rerum eaque, adipisci non!</li>
+        </ul>
       </section>
       <section class="main-section" id="Description_of_fourth_section_topic">
-        <header>Description of first fourth topic</header>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
+        <header class="section-header"">Description of first fourth topic</header>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
         <code>Code</code>
-        <li>List item</li>
+        <ul>
+          <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum dolore at magni cum recusandae! Numquam assumenda perferendis illum, possimus debitis quod nobis aut voluptatem nostrum eos rerum eaque, adipisci non!</li>
+        </ul>
       </section>
       <section class="main-section" id="Description_of_fifth_section_topic">
-        <header>Description of first fifth topic</header>
-        <p>Paragraph</p>
-        <p>Paragraph</p>
+        <header class="section-header"">Description of first fifth topic</header>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit consectetur est optio earum labore corporis, voluptatibus harum recusandae aut sit, quibusdam aperiam ea dolore reprehenderit itaque blanditiis cum, maiores eius similique sequi iusto alias dicta veritatis dolorum. Rem expedita odit fuga in laborum voluptatibus facere esse, molestias fugit, veniam, natus consequatur distinctio itaque cumque aspernatur? Accusamus at minima tenetur tempora quisquam dignissimos ab exercitationem quae magnam, quasi corporis iste laborum sint. Ipsum tempora, ipsa aperiam asperiores quam mollitia. Aliquid ducimus dignissimos inventore eveniet distinctio delectus, natus ipsa nihil soluta suscipit similique ad recusandae modi culpa cupiditate molestias neque. Quasi, quia.</p>
         <code>Code</code>
-        <li>List item</li>
+        <ul>
+          <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum dolore at magni cum recusandae! Numquam assumenda perferendis illum, possimus debitis quod nobis aut voluptatem nostrum eos rerum eaque, adipisci non!</li>
+        </ul>
       </section>
     </main>
-    <script  src="js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
